RESOLVED FIXED104643
Mail hangs when resizing the font size of a large RTL text
https://bugs.webkit.org/show_bug.cgi?id=104643
Summary Mail hangs when resizing the font size of a large RTL text
Ryosuke Niwa
Reported 2012-12-11 00:34:49 PST
Mail hangs when resizing the font size of a large RTL text
Attachments
Fixes the bug (11.48 KB, patch)
2012-12-11 01:04 PST, Ryosuke Niwa
no flags
Resolved conflicts (11.67 KB, patch)
2012-12-11 01:26 PST, Ryosuke Niwa
enrica: review+
buildbot: commit-queue-
Ryosuke Niwa
Comment 1 2012-12-11 01:02:49 PST
Ryosuke Niwa
Comment 2 2012-12-11 01:04:07 PST
Created attachment 178742 [details] Fixes the bug
Ryosuke Niwa
Comment 3 2012-12-11 01:26:33 PST
Created attachment 178746 [details] Resolved conflicts
Build Bot
Comment 4 2012-12-11 01:56:44 PST
Comment on attachment 178746 [details] Resolved conflicts Attachment 178746 [details] did not pass win-ews (win): Output: http://queues.webkit.org/results/15231924
Ryosuke Niwa
Comment 5 2012-12-11 02:25:49 PST
Comment on attachment 178746 [details] Resolved conflicts View in context: https://bugs.webkit.org/attachment.cgi?id=178746&action=review > Source/WebCore/editing/ApplyStyleCommand.cpp:826 > ASSERT(runStart && runEnd && runStart->parentNode() == runEnd->parentNode()); Oh oops, I need to modify this assertion and add a similar one on L841. I'll do that once it's been reviewed. 10>c:\cygwin\home\buildbot\WebKit\Source\WebCore\editing\ApplyStyleCommand.cpp(826) : error C2065: 'runEnd' : undeclared identifier 10>c:\cygwin\home\buildbot\WebKit\Source\WebCore\editing\ApplyStyleCommand.cpp(826) : error C2227: left of '->parentNode' must point to class/struct/union/generic type 10> type is ''unknown-type''
Ryosuke Niwa
Comment 6 2012-12-11 02:28:04 PST
Comment on attachment 178746 [details] Resolved conflicts View in context: https://bugs.webkit.org/attachment.cgi?id=178746&action=review > Source/WebCore/editing/ApplyStyleCommand.cpp:782 > - RefPtr<Node> runStart = node; > - RefPtr<Node> runEnd = node; > + Node* runStart = node.get(); > + Node* runEnd = node.get(); Note that the code below no longer modifies DOM so we don't need a RefPtr anymore.
Enrica Casucci
Comment 7 2012-12-11 14:12:10 PST
Comment on attachment 178746 [details] Resolved conflicts View in context: https://bugs.webkit.org/attachment.cgi?id=178746&action=review Looks good to me. Only few nit picks. Please fix the ASSERT problem before landing > Source/WebCore/ChangeLog:19 > + (InlineRunToApplyStyle): Please remove > Source/WebCore/ChangeLog:21 > + (WebCore): Please remove > Source/WebCore/ChangeLog:29 > + (ApplyStyleCommand): Ditto > Source/WebCore/ChangeLog:32 > + (StyleChange): Ditto > Source/WebCore/editing/ApplyStyleCommand.cpp:719 > +struct InlineRunToApplyStyle { Why did you choose a struct instead of a class?
Ryosuke Niwa
Comment 8 2012-12-11 15:06:41 PST
Comment on attachment 178746 [details] Resolved conflicts View in context: https://bugs.webkit.org/attachment.cgi?id=178746&action=review >> Source/WebCore/editing/ApplyStyleCommand.cpp:719 >> +struct InlineRunToApplyStyle { > > Why did you choose a struct instead of a class? Because all members of this class is public and it doesn't have any getters or setters.
Ryosuke Niwa
Comment 9 2012-12-11 15:34:39 PST
Note You need to log in before you can comment on or make changes to this bug.